--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ApS-ki-xXy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1350" y="819.75"/>
+            <point key="canvasLocation" x="1314" y="781.5"/>
         </scene>
         <!--Journal View Controller-->
         <scene sceneID="XJj-7P-gUn">
@@ -101,27 +101,27 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="GLF-Ip-S0A" secondAttribute="height" multiplier="1:1" id="AAT-Ze-oi9"/>
+                                                    <constraint firstAttribute="width" secondItem="GLF-Ip-S0A" secondAttribute="height" multiplier="1:1" id="pOn-2i-Bwh"/>
                                                 </constraints>
                                                 <variation key="default">
                                                     <mask key="constraints">
-                                                        <exclude reference="AAT-Ze-oi9"/>
+                                                        <exclude reference="pOn-2i-Bwh"/>
                                                     </mask>
                                                 </variation>
                                                 <variation key="heightClass=regular-widthClass=compact">
                                                     <mask key="constraints">
-                                                        <include reference="AAT-Ze-oi9"/>
+                                                        <include reference="pOn-2i-Bwh"/>
                                                     </mask>
                                                 </variation>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" red="0.094233000325999683" green="0.34309724800127339" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstItem="GLF-Ip-S0A" firstAttribute="leading" secondItem="gTB-aa-d42" secondAttribute="leading" constant="3" id="7EY-fT-zh3"/>
+                                            <constraint firstAttribute="trailing" secondItem="GLF-Ip-S0A" secondAttribute="trailing" constant="4" id="3gG-r8-OG0"/>
                                             <constraint firstAttribute="trailing" secondItem="jOk-xe-eoS" secondAttribute="trailing" id="8Nj-LK-ZcW"/>
-                                            <constraint firstAttribute="centerY" secondItem="GLF-Ip-S0A" secondAttribute="centerY" id="UAF-qg-9aq"/>
-                                            <constraint firstAttribute="centerX" secondItem="GLF-Ip-S0A" secondAttribute="centerX" id="fyq-W8-RtE"/>
-                                            <constraint firstAttribute="trailing" secondItem="GLF-Ip-S0A" secondAttribute="trailing" constant="4" id="hRb-IP-Pmn"/>
+                                            <constraint firstAttribute="centerX" secondItem="GLF-Ip-S0A" secondAttribute="centerX" id="BQc-Ud-ZQ8"/>
+                                            <constraint firstAttribute="centerY" secondItem="GLF-Ip-S0A" secondAttribute="centerY" id="LBB-Yr-RJF"/>
+                                            <constraint firstItem="GLF-Ip-S0A" firstAttribute="leading" secondItem="gTB-aa-d42" secondAttribute="leading" constant="3" id="QoK-vD-tl1"/>
                                             <constraint firstAttribute="bottom" secondItem="jOk-xe-eoS" secondAttribute="bottom" constant="8" id="hYy-U2-1ot"/>
                                             <constraint firstItem="jOk-xe-eoS" firstAttribute="leading" secondItem="gTB-aa-d42" secondAttribute="leading" id="xlv-Nx-dGo"/>
                                         </constraints>
@@ -131,13 +131,13 @@
                                                 <exclude reference="GLF-Ip-S0A"/>
                                             </mask>
                                             <mask key="constraints">
+                                                <exclude reference="3gG-r8-OG0"/>
+                                                <exclude reference="BQc-Ud-ZQ8"/>
+                                                <exclude reference="LBB-Yr-RJF"/>
+                                                <exclude reference="QoK-vD-tl1"/>
                                                 <exclude reference="8Nj-LK-ZcW"/>
                                                 <exclude reference="hYy-U2-1ot"/>
                                                 <exclude reference="xlv-Nx-dGo"/>
-                                                <exclude reference="7EY-fT-zh3"/>
-                                                <exclude reference="UAF-qg-9aq"/>
-                                                <exclude reference="fyq-W8-RtE"/>
-                                                <exclude reference="hRb-IP-Pmn"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact">
@@ -146,13 +146,13 @@
                                                 <include reference="GLF-Ip-S0A"/>
                                             </mask>
                                             <mask key="constraints">
+                                                <include reference="3gG-r8-OG0"/>
+                                                <include reference="BQc-Ud-ZQ8"/>
+                                                <include reference="LBB-Yr-RJF"/>
+                                                <include reference="QoK-vD-tl1"/>
                                                 <include reference="8Nj-LK-ZcW"/>
                                                 <include reference="hYy-U2-1ot"/>
                                                 <include reference="xlv-Nx-dGo"/>
-                                                <include reference="7EY-fT-zh3"/>
-                                                <include reference="UAF-qg-9aq"/>
-                                                <include reference="fyq-W8-RtE"/>
-                                                <include reference="hRb-IP-Pmn"/>
                                             </mask>
                                         </variation>
                                         <connections>
@@ -750,32 +750,6 @@
             </objects>
             <point key="canvasLocation" x="1291.5" y="69"/>
         </scene>
-        <!--Category Selection Table View Controller-->
-        <scene sceneID="DNX-jv-GLb">
-            <objects>
-                <tableViewController storyboardIdentifier="CategorySelectionViewController" id="2uU-8E-C0V" customClass="CategorySelectionTableViewController" customModule="The_Math" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sCS-o4-psf">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellIdentifier" id="GnG-3C-P8C">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GnG-3C-P8C" id="crt-BM-6C6">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="2uU-8E-C0V" id="JN6-Xj-YkW"/>
-                            <outlet property="delegate" destination="2uU-8E-C0V" id="Erp-fQ-QJH"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cYM-wB-EhM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1959" y="-6.75"/>
-        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -923,6 +897,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="376.5" y="340.5"/>
         </scene>
     </scenes>
 </document>
