--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -131,13 +131,13 @@
                                                 <exclude reference="GLF-Ip-S0A"/>
                                             </mask>
                                             <mask key="constraints">
+                                                <exclude reference="8Nj-LK-ZcW"/>
+                                                <exclude reference="hYy-U2-1ot"/>
+                                                <exclude reference="xlv-Nx-dGo"/>
                                                 <exclude reference="3gG-r8-OG0"/>
                                                 <exclude reference="BQc-Ud-ZQ8"/>
                                                 <exclude reference="LBB-Yr-RJF"/>
                                                 <exclude reference="QoK-vD-tl1"/>
-                                                <exclude reference="8Nj-LK-ZcW"/>
-                                                <exclude reference="hYy-U2-1ot"/>
-                                                <exclude reference="xlv-Nx-dGo"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact">
@@ -146,13 +146,13 @@
                                                 <include reference="GLF-Ip-S0A"/>
                                             </mask>
                                             <mask key="constraints">
+                                                <include reference="8Nj-LK-ZcW"/>
+                                                <include reference="hYy-U2-1ot"/>
+                                                <include reference="xlv-Nx-dGo"/>
                                                 <include reference="3gG-r8-OG0"/>
                                                 <include reference="BQc-Ud-ZQ8"/>
                                                 <include reference="LBB-Yr-RJF"/>
                                                 <include reference="QoK-vD-tl1"/>
-                                                <include reference="8Nj-LK-ZcW"/>
-                                                <include reference="hYy-U2-1ot"/>
-                                                <include reference="xlv-Nx-dGo"/>
                                             </mask>
                                         </variation>
                                         <connections>
@@ -745,6 +745,14 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="healthView" destination="2wP-hj-H13" id="sMF-f9-3OK"/>
+                        <outlet property="lifestyleView" destination="m1c-9u-Vhf" id="LRK-kM-ixu"/>
+                        <outlet property="loveView" destination="yaF-0k-U7h" id="iAU-ES-uIb"/>
+                        <outlet property="moneyView" destination="ocA-ba-R2k" id="bhq-Db-6Mt"/>
+                        <outlet property="personalView" destination="gTB-aa-d42" id="XXr-BB-V9n"/>
+                        <outlet property="workView" destination="bsW-j7-R0p" id="iYe-4q-8Gn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nri-9R-aOa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
