reveal makes things difficult sometimes

--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -1110,6 +1110,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="7FI-a0-HMt"/>
                                                 </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <state key="normal" title="Add a Comment">
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
