--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -19,62 +19,169 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ckz-iq-MDT" customClass="RoundButton" customModule="The_Math" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Trb-Sw-z9Q">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2S-iq-kEm">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fhD-kS-Xfa" customClass="MoodView" customModule="The_Math" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="80" id="pCc-2t-hsR"/>
+                                                    <constraint firstAttribute="height" constant="80" id="zsu-Pz-DIb"/>
+                                                </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="pCc-2t-hsR"/>
+                                                        <exclude reference="zsu-Pz-DIb"/>
+                                                    </mask>
+                                                </variation>
+                                                <variation key="heightClass=regular-widthClass=compact">
+                                                    <mask key="constraints">
+                                                        <include reference="pCc-2t-hsR"/>
+                                                        <include reference="zsu-Pz-DIb"/>
+                                                    </mask>
+                                                </variation>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="centerX" secondItem="fhD-kS-Xfa" secondAttribute="centerX" id="KVI-hY-BX8"/>
+                                            <constraint firstAttribute="width" secondItem="l2S-iq-kEm" secondAttribute="height" multiplier="1:1" id="ZR4-sa-FzT"/>
+                                            <constraint firstAttribute="centerY" secondItem="fhD-kS-Xfa" secondAttribute="centerY" id="ltF-Ma-EOs"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="subviews">
+                                                <exclude reference="fhD-kS-Xfa"/>
+                                            </mask>
+                                            <mask key="constraints">
+                                                <exclude reference="ZR4-sa-FzT"/>
+                                                <exclude reference="KVI-hY-BX8"/>
+                                                <exclude reference="ltF-Ma-EOs"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=compact">
+                                            <mask key="subviews">
+                                                <include reference="fhD-kS-Xfa"/>
+                                            </mask>
+                                            <mask key="constraints">
+                                                <include reference="ZR4-sa-FzT"/>
+                                                <include reference="KVI-hY-BX8"/>
+                                                <include reference="ltF-Ma-EOs"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4i-fm-FUU">
+                                        <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oOa-1e-f1z">
+                                        <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="SCu-cW-gKr">
-                                        <variation key="heightClass=regular-widthClass=compact" constant="80"/>
+                                    <constraint firstAttribute="centerX" secondItem="l2S-iq-kEm" secondAttribute="centerX" id="1XL-Iy-oij"/>
+                                    <constraint firstItem="B4i-fm-FUU" firstAttribute="top" secondItem="oOa-1e-f1z" secondAttribute="bottom" constant="8" id="7di-Yw-lhu">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="4"/>
                                     </constraint>
-                                    <constraint firstAttribute="height" constant="60" id="poj-fE-QZc">
-                                        <variation key="heightClass=regular-widthClass=compact" constant="80"/>
+                                    <constraint firstAttribute="centerX" secondItem="oOa-1e-f1z" secondAttribute="centerX" id="L4b-az-cVd"/>
+                                    <constraint firstAttribute="centerY" secondItem="l2S-iq-kEm" secondAttribute="centerY" id="St5-jg-1PU"/>
+                                    <constraint firstItem="l2S-iq-kEm" firstAttribute="top" secondItem="B4i-fm-FUU" secondAttribute="bottom" constant="20" id="TcD-PQ-5gn"/>
+                                    <constraint firstItem="l2S-iq-kEm" firstAttribute="leading" secondItem="Trb-Sw-z9Q" secondAttribute="leading" id="Wzv-bd-7uA"/>
+                                    <constraint firstItem="B4i-fm-FUU" firstAttribute="top" secondItem="oOa-1e-f1z" secondAttribute="bottom" constant="8" id="bSs-if-veb">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="4"/>
                                     </constraint>
+                                    <constraint firstAttribute="centerX" secondItem="B4i-fm-FUU" secondAttribute="centerX" id="doh-pG-Sde"/>
+                                    <constraint firstAttribute="trailing" secondItem="l2S-iq-kEm" secondAttribute="trailing" id="uXy-hm-QCO"/>
                                 </constraints>
                                 <variation key="default">
+                                    <mask key="subviews">
+                                        <exclude reference="l2S-iq-kEm"/>
+                                        <exclude reference="B4i-fm-FUU"/>
+                                        <exclude reference="oOa-1e-f1z"/>
+                                    </mask>
                                     <mask key="constraints">
-                                        <exclude reference="SCu-cW-gKr"/>
-                                        <exclude reference="poj-fE-QZc"/>
+                                        <exclude reference="1XL-Iy-oij"/>
+                                        <exclude reference="St5-jg-1PU"/>
+                                        <exclude reference="TcD-PQ-5gn"/>
+                                        <exclude reference="Wzv-bd-7uA"/>
+                                        <exclude reference="uXy-hm-QCO"/>
+                                        <exclude reference="L4b-az-cVd"/>
+                                        <exclude reference="7di-Yw-lhu"/>
+                                        <exclude reference="bSs-if-veb"/>
+                                        <exclude reference="doh-pG-Sde"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="subviews">
+                                        <include reference="l2S-iq-kEm"/>
+                                        <include reference="B4i-fm-FUU"/>
+                                        <include reference="oOa-1e-f1z"/>
+                                    </mask>
                                     <mask key="constraints">
-                                        <include reference="SCu-cW-gKr"/>
-                                        <include reference="poj-fE-QZc"/>
+                                        <include reference="1XL-Iy-oij"/>
+                                        <include reference="St5-jg-1PU"/>
+                                        <include reference="TcD-PQ-5gn"/>
+                                        <include reference="Wzv-bd-7uA"/>
+                                        <include reference="uXy-hm-QCO"/>
+                                        <include reference="L4b-az-cVd"/>
+                                        <include reference="7di-Yw-lhu"/>
+                                        <include reference="bSs-if-veb"/>
+                                        <include reference="doh-pG-Sde"/>
                                     </mask>
                                 </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.1529411765" green="0.41960784309999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="Ckz-iq-MDT" secondAttribute="centerY" id="12C-CI-boV"/>
-                            <constraint firstAttribute="centerX" secondItem="Ckz-iq-MDT" secondAttribute="centerX" id="FIE-SC-1Yd"/>
+                            <constraint firstItem="6a3-RQ-uH2" firstAttribute="top" secondItem="Trb-Sw-z9Q" secondAttribute="bottom" id="Aam-Ld-Bwn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Trb-Sw-z9Q" secondAttribute="trailing" constant="-16" id="HVT-uX-Met"/>
+                            <constraint firstItem="Trb-Sw-z9Q" firstAttribute="leading" secondItem="dMA-By-fQC" secondAttribute="leadingMargin" constant="-16" id="ZYf-cB-roT"/>
+                            <constraint firstItem="Trb-Sw-z9Q" firstAttribute="top" secondItem="vfV-EI-tAv" secondAttribute="bottom" constant="60" id="duO-PQ-xt7">
+                                <variation key="heightClass=regular-widthClass=compact" constant="80"/>
+                            </constraint>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="Ckz-iq-MDT"/>
+                                <exclude reference="Trb-Sw-z9Q"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="12C-CI-boV"/>
-                                <exclude reference="FIE-SC-1Yd"/>
+                                <exclude reference="HVT-uX-Met"/>
+                                <exclude reference="ZYf-cB-roT"/>
+                                <exclude reference="duO-PQ-xt7"/>
+                                <exclude reference="Aam-Ld-Bwn"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
-                                <include reference="Ckz-iq-MDT"/>
+                                <include reference="Trb-Sw-z9Q"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="12C-CI-boV"/>
-                                <include reference="FIE-SC-1Yd"/>
+                                <include reference="HVT-uX-Met"/>
+                                <include reference="ZYf-cB-roT"/>
+                                <include reference="duO-PQ-xt7"/>
+                                <include reference="Aam-Ld-Bwn"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="moodTrigger" destination="Ckz-iq-MDT" id="Tpe-Ok-wI0"/>
+                        <outlet property="contentView" destination="l2S-iq-kEm" id="Hvv-dS-Dpc"/>
+                        <outlet property="feelingLabel" destination="oOa-1e-f1z" id="OoO-UT-7JF"/>
+                        <outlet property="instructionLabel" destination="B4i-fm-FUU" id="KP8-uU-v3h"/>
+                        <outlet property="moodTrigger" destination="fhD-kS-Xfa" id="InW-JK-uQQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ApS-ki-xXy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1314" y="781.5"/>
+            <point key="canvasLocation" x="1309.5" y="782.25"/>
         </scene>
         <!--Journal Add Details View Controller-->
         <scene sceneID="i2Q-fK-bD2">
@@ -250,7 +357,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gAn-h6-tRj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2074.5" y="69"/>
+            <point key="canvasLocation" x="2170.5" y="498"/>
         </scene>
         <!--Journal View Controller-->
         <scene sceneID="XJj-7P-gUn">
