--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Trb-Sw-z9Q">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2S-iq-kEm">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2S-iq-kEm" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fhD-kS-Xfa" customClass="MoodView" customModule="The_Math" customModuleProvider="target">
@@ -83,6 +83,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="centerX" secondItem="l2S-iq-kEm" secondAttribute="centerX" id="1XL-Iy-oij"/>
+                                    <constraint firstAttribute="width" constant="400" id="SMc-uo-EOu"/>
                                     <constraint firstAttribute="centerY" secondItem="l2S-iq-kEm" secondAttribute="centerY" id="St5-jg-1PU"/>
                                     <constraint firstItem="l2S-iq-kEm" firstAttribute="top" secondItem="B4i-fm-FUU" secondAttribute="bottom" constant="20" id="TcD-PQ-5gn"/>
                                     <constraint firstItem="l2S-iq-kEm" firstAttribute="leading" secondItem="Trb-Sw-z9Q" secondAttribute="leading" id="Wzv-bd-7uA"/>
@@ -95,12 +96,13 @@
                                         <exclude reference="B4i-fm-FUU"/>
                                     </mask>
                                     <mask key="constraints">
-                                        <exclude reference="doh-pG-Sde"/>
+                                        <exclude reference="SMc-uo-EOu"/>
                                         <exclude reference="1XL-Iy-oij"/>
                                         <exclude reference="St5-jg-1PU"/>
                                         <exclude reference="TcD-PQ-5gn"/>
                                         <exclude reference="Wzv-bd-7uA"/>
                                         <exclude reference="uXy-hm-QCO"/>
+                                        <exclude reference="doh-pG-Sde"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -109,12 +111,13 @@
                                         <include reference="B4i-fm-FUU"/>
                                     </mask>
                                     <mask key="constraints">
-                                        <include reference="doh-pG-Sde"/>
+                                        <include reference="SMc-uo-EOu"/>
                                         <include reference="1XL-Iy-oij"/>
                                         <include reference="St5-jg-1PU"/>
                                         <include reference="TcD-PQ-5gn"/>
                                         <include reference="Wzv-bd-7uA"/>
                                         <include reference="uXy-hm-QCO"/>
+                                        <include reference="doh-pG-Sde"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -152,6 +155,7 @@
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="containerView" destination="Trb-Sw-z9Q" id="Iqt-vg-4yE"/>
                         <outlet property="contentView" destination="l2S-iq-kEm" id="Hvv-dS-Dpc"/>
                         <outlet property="instructionLabel" destination="B4i-fm-FUU" id="KP8-uU-v3h"/>
                         <outlet property="moodTrigger" destination="fhD-kS-Xfa" id="InW-JK-uQQ"/>
